--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "prettier": "^2.8.3",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "react": "^18.2.0"
   }
 }
