--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "react": "^18.2.0"
+    "@types/luxon": "^3.2.0",
+    "@types/react": "^18.0.27",
+    "luxon": "^3.2.1",
+    "react": "^18.2.0",
+    "rxjs": "^7.8.0"
   }
 }
