--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "declaration": true,
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
