--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
   },
   "homepage": "https://github.com/thomasio101/haakje#readme",
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "prettier": "^2.8.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
